@@ -1,1 +1,0 @@
-[[-1, 649, "min"], [-1, 649, "min"], [-1, 649, "min"], [-1, 649, "min"], [-1, 649, "min"], [-1, 649, "min"], [-1, 649, "min"], [-1, 649, "min"], [-1, 649, "min"]]
